--- a/PML Projects/08-02a -Finance Project.ipynb
+++ b/PML Projects/08-02a -Finance Project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -627,11 +627,11 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th>Bank Ticker</th>\n",
-       "      <th colspan=\"5\" halign=\"left\">BAC</th>\n",
-       "      <th colspan=\"5\" halign=\"left\">C</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">BAC</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">C</th>\n",
        "      <th>...</th>\n",
-       "      <th colspan=\"5\" halign=\"left\">MS</th>\n",
-       "      <th colspan=\"5\" halign=\"left\">WFC</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">MS</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">WFC</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Stock Info</th>\n",
@@ -640,22 +640,22 @@
        "      <th>Open</th>\n",
        "      <th>Close</th>\n",
        "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
        "      <th>Open</th>\n",
        "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
        "      <th>...</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
        "      <th>Open</th>\n",
        "      <th>Close</th>\n",
        "      <th>Volume</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
@@ -690,22 +690,22 @@
        "      <td>46.919998</td>\n",
        "      <td>47.080002</td>\n",
        "      <td>16296700.0</td>\n",
+       "      <td>35.953278</td>\n",
        "      <td>493.799988</td>\n",
        "      <td>481.100006</td>\n",
        "      <td>490.000000</td>\n",
        "      <td>492.899994</td>\n",
-       "      <td>1537600.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>46.919998</td>\n",
+       "      <td>47.080002</td>\n",
+       "      <td>16296700.0</td>\n",
+       "      <td>35.953278</td>\n",
        "      <td>47.180000</td>\n",
        "      <td>46.150002</td>\n",
        "      <td>46.919998</td>\n",
        "      <td>47.080002</td>\n",
        "      <td>16296700.0</td>\n",
-       "      <td>47.180000</td>\n",
-       "      <td>46.150002</td>\n",
-       "      <td>46.919998</td>\n",
-       "      <td>47.080002</td>\n",
-       "      <td>16296700.0</td>\n",
+       "      <td>35.953278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-01-04</th>\n",
@@ -714,22 +714,22 @@
        "      <td>47.000000</td>\n",
        "      <td>46.580002</td>\n",
        "      <td>17757900.0</td>\n",
+       "      <td>35.571438</td>\n",
        "      <td>491.000000</td>\n",
        "      <td>483.500000</td>\n",
        "      <td>488.600006</td>\n",
        "      <td>483.799988</td>\n",
-       "      <td>1870900.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>46.580002</td>\n",
+       "      <td>17757900.0</td>\n",
+       "      <td>35.571438</td>\n",
        "      <td>47.240002</td>\n",
        "      <td>46.450001</td>\n",
        "      <td>47.000000</td>\n",
        "      <td>46.580002</td>\n",
        "      <td>17757900.0</td>\n",
-       "      <td>47.240002</td>\n",
-       "      <td>46.450001</td>\n",
-       "      <td>47.000000</td>\n",
-       "      <td>46.580002</td>\n",
-       "      <td>17757900.0</td>\n",
+       "      <td>35.571438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-01-05</th>\n",
@@ -738,22 +738,22 @@
        "      <td>46.580002</td>\n",
        "      <td>46.639999</td>\n",
        "      <td>14970700.0</td>\n",
+       "      <td>35.617275</td>\n",
        "      <td>487.799988</td>\n",
        "      <td>484.000000</td>\n",
        "      <td>484.399994</td>\n",
        "      <td>486.200012</td>\n",
-       "      <td>1143100.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>46.580002</td>\n",
+       "      <td>46.639999</td>\n",
+       "      <td>14970700.0</td>\n",
+       "      <td>35.617275</td>\n",
        "      <td>46.830002</td>\n",
        "      <td>46.320000</td>\n",
        "      <td>46.580002</td>\n",
        "      <td>46.639999</td>\n",
        "      <td>14970700.0</td>\n",
-       "      <td>46.830002</td>\n",
-       "      <td>46.320000</td>\n",
-       "      <td>46.580002</td>\n",
-       "      <td>46.639999</td>\n",
-       "      <td>14970700.0</td>\n",
+       "      <td>35.617275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-01-06</th>\n",
@@ -762,22 +762,22 @@
        "      <td>46.799999</td>\n",
        "      <td>46.570000</td>\n",
        "      <td>12599800.0</td>\n",
+       "      <td>35.563797</td>\n",
        "      <td>489.000000</td>\n",
        "      <td>482.000000</td>\n",
        "      <td>488.799988</td>\n",
        "      <td>486.200012</td>\n",
-       "      <td>1370200.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>46.799999</td>\n",
+       "      <td>46.570000</td>\n",
+       "      <td>12599800.0</td>\n",
+       "      <td>35.563797</td>\n",
        "      <td>46.910000</td>\n",
        "      <td>46.349998</td>\n",
        "      <td>46.799999</td>\n",
        "      <td>46.570000</td>\n",
        "      <td>12599800.0</td>\n",
-       "      <td>46.910000</td>\n",
-       "      <td>46.349998</td>\n",
-       "      <td>46.799999</td>\n",
-       "      <td>46.570000</td>\n",
-       "      <td>12599800.0</td>\n",
+       "      <td>35.563797</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-01-09</th>\n",
@@ -786,26 +786,26 @@
        "      <td>46.720001</td>\n",
        "      <td>46.599998</td>\n",
        "      <td>15619400.0</td>\n",
+       "      <td>35.586720</td>\n",
        "      <td>487.399994</td>\n",
        "      <td>483.000000</td>\n",
        "      <td>486.000000</td>\n",
        "      <td>483.899994</td>\n",
-       "      <td>1680700.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>46.720001</td>\n",
+       "      <td>46.599998</td>\n",
+       "      <td>15619400.0</td>\n",
+       "      <td>35.586720</td>\n",
        "      <td>46.970001</td>\n",
        "      <td>46.360001</td>\n",
        "      <td>46.720001</td>\n",
        "      <td>46.599998</td>\n",
        "      <td>15619400.0</td>\n",
-       "      <td>46.970001</td>\n",
-       "      <td>46.360001</td>\n",
-       "      <td>46.720001</td>\n",
-       "      <td>46.599998</td>\n",
-       "      <td>15619400.0</td>\n",
+       "      <td>35.586720</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
+       "<p>5 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -818,37 +818,37 @@
        "2006-01-06   46.910000  46.349998  46.799999  46.570000  12599800.0   \n",
        "2006-01-09   46.970001  46.360001  46.720001  46.599998  15619400.0   \n",
        "\n",
-       "Bank Ticker           C                                                 ...  \\\n",
-       "Stock Info         High         Low        Open       Close     Volume  ...   \n",
+       "Bank Ticker                      C                                      ...  \\\n",
+       "Stock Info   Adj Close        High         Low        Open       Close  ...   \n",
        "Date                                                                    ...   \n",
-       "2006-01-03   493.799988  481.100006  490.000000  492.899994  1537600.0  ...   \n",
-       "2006-01-04   491.000000  483.500000  488.600006  483.799988  1870900.0  ...   \n",
-       "2006-01-05   487.799988  484.000000  484.399994  486.200012  1143100.0  ...   \n",
-       "2006-01-06   489.000000  482.000000  488.799988  486.200012  1370200.0  ...   \n",
-       "2006-01-09   487.399994  483.000000  486.000000  483.899994  1680700.0  ...   \n",
+       "2006-01-03   35.953278  493.799988  481.100006  490.000000  492.899994  ...   \n",
+       "2006-01-04   35.571438  491.000000  483.500000  488.600006  483.799988  ...   \n",
+       "2006-01-05   35.617275  487.799988  484.000000  484.399994  486.200012  ...   \n",
+       "2006-01-06   35.563797  489.000000  482.000000  488.799988  486.200012  ...   \n",
+       "2006-01-09   35.586720  487.399994  483.000000  486.000000  483.899994  ...   \n",
        "\n",
-       "Bank Ticker         MS                                               \\\n",
-       "Stock Info        High        Low       Open      Close      Volume   \n",
+       "Bank Ticker         MS                                          WFC  \\\n",
+       "Stock Info        Open      Close      Volume  Adj Close       High   \n",
        "Date                                                                  \n",
-       "2006-01-03   47.180000  46.150002  46.919998  47.080002  16296700.0   \n",
-       "2006-01-04   47.240002  46.450001  47.000000  46.580002  17757900.0   \n",
-       "2006-01-05   46.830002  46.320000  46.580002  46.639999  14970700.0   \n",
-       "2006-01-06   46.910000  46.349998  46.799999  46.570000  12599800.0   \n",
-       "2006-01-09   46.970001  46.360001  46.720001  46.599998  15619400.0   \n",
+       "2006-01-03   46.919998  47.080002  16296700.0  35.953278  47.180000   \n",
+       "2006-01-04   47.000000  46.580002  17757900.0  35.571438  47.240002   \n",
+       "2006-01-05   46.580002  46.639999  14970700.0  35.617275  46.830002   \n",
+       "2006-01-06   46.799999  46.570000  12599800.0  35.563797  46.910000   \n",
+       "2006-01-09   46.720001  46.599998  15619400.0  35.586720  46.970001   \n",
        "\n",
-       "Bank Ticker        WFC                                               \n",
-       "Stock Info        High        Low       Open      Close      Volume  \n",
+       "Bank Ticker                                                          \n",
+       "Stock Info         Low       Open      Close      Volume  Adj Close  \n",
        "Date                                                                 \n",
-       "2006-01-03   47.180000  46.150002  46.919998  47.080002  16296700.0  \n",
-       "2006-01-04   47.240002  46.450001  47.000000  46.580002  17757900.0  \n",
-       "2006-01-05   46.830002  46.320000  46.580002  46.639999  14970700.0  \n",
-       "2006-01-06   46.910000  46.349998  46.799999  46.570000  12599800.0  \n",
-       "2006-01-09   46.970001  46.360001  46.720001  46.599998  15619400.0  \n",
+       "2006-01-03   46.150002  46.919998  47.080002  16296700.0  35.953278  \n",
+       "2006-01-04   46.450001  47.000000  46.580002  17757900.0  35.571438  \n",
+       "2006-01-05   46.320000  46.580002  46.639999  14970700.0  35.617275  \n",
+       "2006-01-06   46.349998  46.799999  46.570000  12599800.0  35.563797  \n",
+       "2006-01-09   46.360001  46.720001  46.599998  15619400.0  35.586720  \n",
        "\n",
-       "[5 rows x 30 columns]"
+       "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,6 +857,34 @@
     "bank_stocks = pd.concat(stockFrames, axis=1, keys=tickers)\n",
     "bank_stocks.columns.names = ['Bank Ticker','Stock Info']\n",
     "bank_stocks.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to function call (<ipython-input-133-1bbf6a4d5d56>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-133-1bbf6a4d5d56>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    bank_stocks.droplevel([0],axis=1)=bank_stocks.droplevel([0],axis=1).drop('Adj Close',axis=1,inplace=True)\u001b[0m\n\u001b[1;37m                                                                                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m can't assign to function call\n"
+     ]
+    }
+   ],
+   "source": [
+    "#bank_stocks['BAC'].droplevel(['Adj Close'],axis=1)\n",
+    "bank_stocks.droplevel([0],axis=1)=bank_stocks.droplevel([0],axis=1).drop('Adj Close',axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bank_stocks"
    ]
   },
   {
