--- a/PML Projects/08-02a -Finance Project.ipynb
+++ b/PML Projects/08-02a -Finance Project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -408,9 +408,11 @@
        "      <th>Open</th>\n",
        "      <th>Close</th>\n",
        "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -426,6 +428,7 @@
        "      <td>46.919998</td>\n",
        "      <td>47.080002</td>\n",
        "      <td>16296700.0</td>\n",
+       "      <td>35.953278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-01-04</th>\n",
@@ -434,6 +437,7 @@
        "      <td>47.000000</td>\n",
        "      <td>46.580002</td>\n",
        "      <td>17757900.0</td>\n",
+       "      <td>35.571438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-01-05</th>\n",
@@ -442,6 +446,7 @@
        "      <td>46.580002</td>\n",
        "      <td>46.639999</td>\n",
        "      <td>14970700.0</td>\n",
+       "      <td>35.617275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-01-06</th>\n",
@@ -450,6 +455,7 @@
        "      <td>46.799999</td>\n",
        "      <td>46.570000</td>\n",
        "      <td>12599800.0</td>\n",
+       "      <td>35.563797</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-01-09</th>\n",
@@ -458,22 +464,23 @@
        "      <td>46.720001</td>\n",
        "      <td>46.599998</td>\n",
        "      <td>15619400.0</td>\n",
+       "      <td>35.586720</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 High        Low       Open      Close      Volume\n",
-       "Date                                                              \n",
-       "2006-01-03  47.180000  46.150002  46.919998  47.080002  16296700.0\n",
-       "2006-01-04  47.240002  46.450001  47.000000  46.580002  17757900.0\n",
-       "2006-01-05  46.830002  46.320000  46.580002  46.639999  14970700.0\n",
-       "2006-01-06  46.910000  46.349998  46.799999  46.570000  12599800.0\n",
-       "2006-01-09  46.970001  46.360001  46.720001  46.599998  15619400.0"
+       "                 High        Low       Open      Close      Volume  Adj Close\n",
+       "Date                                                                         \n",
+       "2006-01-03  47.180000  46.150002  46.919998  47.080002  16296700.0  35.953278\n",
+       "2006-01-04  47.240002  46.450001  47.000000  46.580002  17757900.0  35.571438\n",
+       "2006-01-05  46.830002  46.320000  46.580002  46.639999  14970700.0  35.617275\n",
+       "2006-01-06  46.910000  46.349998  46.799999  46.570000  12599800.0  35.563797\n",
+       "2006-01-09  46.970001  46.360001  46.720001  46.599998  15619400.0  35.586720"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +855,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,30 +868,286 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
+   "execution_count": 174,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-133-1bbf6a4d5d56>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-133-1bbf6a4d5d56>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    bank_stocks.droplevel([0],axis=1)=bank_stocks.droplevel([0],axis=1).drop('Adj Close',axis=1,inplace=True)\u001b[0m\n\u001b[1;37m                                                                                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m can't assign to function call\n"
-     ]
+     "data": {
+      "text/plain": [
+       "MultiIndex(levels=[['BAC', 'C', 'GS', 'JPM', 'MS', 'WFC'], ['High', 'Low', 'Open', 'Close', 'Volume', 'Adj Close']],\n",
+       "           codes=[[0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5], [0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5]],\n",
+       "           names=['Bank Ticker', 'Stock Info'])"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#bank_stocks['BAC'].droplevel(['Adj Close'],axis=1)\n",
-    "bank_stocks.droplevel([0],axis=1)=bank_stocks.droplevel([0],axis=1).drop('Adj Close',axis=1,inplace=True)"
+    "bank_stocks.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Bank Ticker</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">BAC</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">C</th>\n",
+       "      <th>...</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">MS</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">WFC</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stock Info</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2006-01-03</th>\n",
+       "      <td>47.180000</td>\n",
+       "      <td>46.150002</td>\n",
+       "      <td>46.919998</td>\n",
+       "      <td>47.080002</td>\n",
+       "      <td>16296700.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>493.799988</td>\n",
+       "      <td>481.100006</td>\n",
+       "      <td>490.000000</td>\n",
+       "      <td>492.899994</td>\n",
+       "      <td>...</td>\n",
+       "      <td>46.919998</td>\n",
+       "      <td>47.080002</td>\n",
+       "      <td>16296700.0</td>\n",
+       "      <td>35.953278</td>\n",
+       "      <td>47.180000</td>\n",
+       "      <td>46.150002</td>\n",
+       "      <td>46.919998</td>\n",
+       "      <td>47.080002</td>\n",
+       "      <td>16296700.0</td>\n",
+       "      <td>35.953278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-04</th>\n",
+       "      <td>47.240002</td>\n",
+       "      <td>46.450001</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>46.580002</td>\n",
+       "      <td>17757900.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>491.000000</td>\n",
+       "      <td>483.500000</td>\n",
+       "      <td>488.600006</td>\n",
+       "      <td>483.799988</td>\n",
+       "      <td>...</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>46.580002</td>\n",
+       "      <td>17757900.0</td>\n",
+       "      <td>35.571438</td>\n",
+       "      <td>47.240002</td>\n",
+       "      <td>46.450001</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>46.580002</td>\n",
+       "      <td>17757900.0</td>\n",
+       "      <td>35.571438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-05</th>\n",
+       "      <td>46.830002</td>\n",
+       "      <td>46.320000</td>\n",
+       "      <td>46.580002</td>\n",
+       "      <td>46.639999</td>\n",
+       "      <td>14970700.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>487.799988</td>\n",
+       "      <td>484.000000</td>\n",
+       "      <td>484.399994</td>\n",
+       "      <td>486.200012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>46.580002</td>\n",
+       "      <td>46.639999</td>\n",
+       "      <td>14970700.0</td>\n",
+       "      <td>35.617275</td>\n",
+       "      <td>46.830002</td>\n",
+       "      <td>46.320000</td>\n",
+       "      <td>46.580002</td>\n",
+       "      <td>46.639999</td>\n",
+       "      <td>14970700.0</td>\n",
+       "      <td>35.617275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-06</th>\n",
+       "      <td>46.910000</td>\n",
+       "      <td>46.349998</td>\n",
+       "      <td>46.799999</td>\n",
+       "      <td>46.570000</td>\n",
+       "      <td>12599800.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>489.000000</td>\n",
+       "      <td>482.000000</td>\n",
+       "      <td>488.799988</td>\n",
+       "      <td>486.200012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>46.799999</td>\n",
+       "      <td>46.570000</td>\n",
+       "      <td>12599800.0</td>\n",
+       "      <td>35.563797</td>\n",
+       "      <td>46.910000</td>\n",
+       "      <td>46.349998</td>\n",
+       "      <td>46.799999</td>\n",
+       "      <td>46.570000</td>\n",
+       "      <td>12599800.0</td>\n",
+       "      <td>35.563797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-09</th>\n",
+       "      <td>46.970001</td>\n",
+       "      <td>46.360001</td>\n",
+       "      <td>46.720001</td>\n",
+       "      <td>46.599998</td>\n",
+       "      <td>15619400.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>487.399994</td>\n",
+       "      <td>483.000000</td>\n",
+       "      <td>486.000000</td>\n",
+       "      <td>483.899994</td>\n",
+       "      <td>...</td>\n",
+       "      <td>46.720001</td>\n",
+       "      <td>46.599998</td>\n",
+       "      <td>15619400.0</td>\n",
+       "      <td>35.586720</td>\n",
+       "      <td>46.970001</td>\n",
+       "      <td>46.360001</td>\n",
+       "      <td>46.720001</td>\n",
+       "      <td>46.599998</td>\n",
+       "      <td>15619400.0</td>\n",
+       "      <td>35.586720</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Bank Ticker        BAC                                                         \\\n",
+       "Stock Info        High        Low       Open      Close      Volume Adj Close   \n",
+       "Date                                                                            \n",
+       "2006-01-03   47.180000  46.150002  46.919998  47.080002  16296700.0       NaN   \n",
+       "2006-01-04   47.240002  46.450001  47.000000  46.580002  17757900.0       NaN   \n",
+       "2006-01-05   46.830002  46.320000  46.580002  46.639999  14970700.0       NaN   \n",
+       "2006-01-06   46.910000  46.349998  46.799999  46.570000  12599800.0       NaN   \n",
+       "2006-01-09   46.970001  46.360001  46.720001  46.599998  15619400.0       NaN   \n",
+       "\n",
+       "Bank Ticker           C                                      ...         MS  \\\n",
+       "Stock Info         High         Low        Open       Close  ...       Open   \n",
+       "Date                                                         ...              \n",
+       "2006-01-03   493.799988  481.100006  490.000000  492.899994  ...  46.919998   \n",
+       "2006-01-04   491.000000  483.500000  488.600006  483.799988  ...  47.000000   \n",
+       "2006-01-05   487.799988  484.000000  484.399994  486.200012  ...  46.580002   \n",
+       "2006-01-06   489.000000  482.000000  488.799988  486.200012  ...  46.799999   \n",
+       "2006-01-09   487.399994  483.000000  486.000000  483.899994  ...  46.720001   \n",
+       "\n",
+       "Bank Ticker                                          WFC             \\\n",
+       "Stock Info       Close      Volume  Adj Close       High        Low   \n",
+       "Date                                                                  \n",
+       "2006-01-03   47.080002  16296700.0  35.953278  47.180000  46.150002   \n",
+       "2006-01-04   46.580002  17757900.0  35.571438  47.240002  46.450001   \n",
+       "2006-01-05   46.639999  14970700.0  35.617275  46.830002  46.320000   \n",
+       "2006-01-06   46.570000  12599800.0  35.563797  46.910000  46.349998   \n",
+       "2006-01-09   46.599998  15619400.0  35.586720  46.970001  46.360001   \n",
+       "\n",
+       "Bank Ticker                                               \n",
+       "Stock Info        Open      Close      Volume  Adj Close  \n",
+       "Date                                                      \n",
+       "2006-01-03   46.919998  47.080002  16296700.0  35.953278  \n",
+       "2006-01-04   47.000000  46.580002  17757900.0  35.571438  \n",
+       "2006-01-05   46.580002  46.639999  14970700.0  35.617275  \n",
+       "2006-01-06   46.799999  46.570000  12599800.0  35.563797  \n",
+       "2006-01-09   46.720001  46.599998  15619400.0  35.586720  \n",
+       "\n",
+       "[5 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bank_stocks"
+    "bank_stocks.head()"
    ]
   },
   {
